# jetpack

./: .envrc  .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  Dockerfile  LICENSE  PUBLISHING.md  README.md  install-stack.sh  jetpack.cabal  package.yaml  release.sh  shell.nix  stack.yaml  todo_rws.md  watch-tests
app/: Main.hs  Watcher.hs
binaries/: jetpack-0.0.3-linux-x64.tgz  jetpack-0.0.3-mac-x64.tgz  jetpack-linux-x64.tgz  jetpack-mac-x64.tgz
nix/: hindent-imposter.nix  inputs.nix  pkgs.nix
notifier/: Cargo.toml  Notify.hs
notifier/src/: lib.rs
package/linux/: build-in-docker.sh  build-package.sh
package/mac/: build-package.sh
package/npm/: .snyk  README.md  index.js  package-lock.json  package.json
resources/: hmr.js
script/: format.sh  hindent.sh  install-readline.sh  install-stack.sh
src/: Builder.hs  Cleaner.hs  CliArguments.hs  Compile.hs  ConcatModule.hs  Config.hs  Dependencies.hs  DependencyTree.hs  EntryPoints.hs  Env.hs  Error.hs  Errors.hs  FileUtils.hs  Hooks.hs  HotReload.hs  Init.hs  Lib.hs  Logger.hs  Message.hs  Notify.hs  Pipeline.hs  ProgressBar.hs  ProgressSpinner.hs  Require.hs  Resolver.hs  Task.hs  ToolPaths.hs  Version.hs  WatchMode.hs  Watcher.hs
src/Algebra/: Pipeline.hs  Setup.hs
src/Alternative/: IO.hs
src/HotReload/: Server.hs
src/Interpreter/: Logger.hs  Pipeline.hs  Setup.hs
src/Parser/: Ast.hs  Comment.hs  Import.hs  JetpackVersion.hs  PackageJson.hs  Require.hs
src/Progress/: Counter.hs  Loader.hs  Region.hs
src/Safe/: IO.hs
src/Twitch/: Extra.hs
src/Utils/: Files.hs  Free.hs  Parser.hs  Text.hs  Tree.hs
test/: ConcatModuleSpec.hs  ConfigSpec.hs  DependenciesSpec.hs  DocTest.hs  RequireSpec.hs  Spec.hs
test/Helper/: Property.hs
test/Parser/: CommentSpec.hs  RequireSpec.hs
test/fixtures/: jetpack.json
test/fixtures/basics/modules/: test_no_parse.js
test/fixtures/basics/sources/: Foo.elm  Main.elm  index.coffee  index.js  no_parse_index.js  notParsed.coffee
test/fixtures/basics/sources/Page/: Moo.elm
test/fixtures/basics/tmp/: deps.json
test/fixtures/concat/js/: ui@@@src@@@Page@@@Foo.js.js
test/fixtures/concat/js/Page/: Foo.js
test/fixtures/concat/tmp/: test___fixtures___concat___modules___Page___Foo.js.js  test___fixtures___concat___sources___Page___Moo.js.js  ui@@@src@@@foo.js.js
test/fixtures/failing/modules/: test.js
test/fixtures/failing/sources/: index.coffee  index.kaffe
test/fixtures/failing/tmp/: .gitkeep  deps.json
