name:                jetpack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jetpack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Config,
                       Error,
                       Task,
                       Interpreter.Pipeline,
                       Interpreter.Logger,
                       Logger,
                       Pipeline,
                       Parser.Ast,
                       Parser.Comment,
                       Parser.Require,
                       Utils.Files,
                       Utils.Parser,
                       Utils.Text,
                       Utils.Free
  build-depends:       base >= 4.7 && < 5,
                       aeson == 1.0.2.1,
                       binary == 0.8.3.0,
                       either == 4.4.1.1,
                       text == 1.2.2.1,
                       filepath == 1.4.1.1,
                       bytestring == 0.10.8.1,
                       directory == 1.3.0.0,
                       containers == 0.5.7.1,
                       transformers == 0.5.2.0,
                       either == 4.4.1.1,
                       directory == 1.3.0.0,
                       parsec == 3.1.11,
                       free == 4.12.4,
                       filepath == 1.4.1.1
  default-language:    Haskell2010

executable jetpack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jetpack
  default-language:    Haskell2010

test-suite jetpack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ConfigSpec,
                       Helper.Property,
                       Parser.RequireSpec,
                       Parser.CommentSpec
  build-depends:       base,
                       jetpack,
                       tasty == 0.11.2,
                       tasty-hunit == 0.9.2,
                       tasty-quickcheck == 0.8.4,
                       either == 4.4.1.1,
                       filepath == 1.4.1.1,
                       text == 1.2.2.1,
                       doctest == 0.11.1,
                       Glob == 0.7.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jetpack
