name:                jetpack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jetpack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Config,
                       Dependencies,
                       Compile,
                       Error,
                       Interpreter.Logger,
                       Interpreter.Pipeline,
                       Logger,
                       Parser.Ast,
                       Parser.Comment,
                       Parser.Require,
                       Parser.PackageJson,
                       Pipeline,
                       Task
  other-modules:       Utils.Files,
                       Utils.Parser,
                       Utils.Text,
                       Utils.Free,
                       Utils.Tree
  build-depends:       base >= 4.7 && < 5,
                       aeson == 1.0.2.1,
                       text == 1.2.2.1,
                       filepath == 1.4.1.1,
                       directory == 1.3.0.0,
                       containers == 0.5.7.1,
                       transformers == 0.5.2.0,
                       mtl == 2.2.1,
                       directory == 1.3.0.0,
                       parsec == 3.1.11,
                       free == 4.12.4,
                       filepath == 1.4.1.1,
                       Glob == 0.7.*,
                       process == 1.4.3.0,
                       MissingH == 1.4.0.1,
                       lifted-async == 0.9.1.1,
                       unix == 2.7.2.1,
                       time == 1.6.0.1,
                       bytestring == 0.10.8.1,
                       safe == 0.3.14
  default-language:    Haskell2010

executable jetpack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jetpack
  default-language:    Haskell2010

test-suite jetpack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ConfigSpec,
                       DependenciesSpec,
                       Helper.Property,
                       Parser.RequireSpec,
                       Parser.CommentSpec
  build-depends:       base,
                       Glob == 0.7.*,
                       containers == 0.5.7.1,
                       doctest == 0.11.1,
                       mtl == 2.2.1,
                       filepath == 1.4.1.1,
                       jetpack,
                       tasty == 0.11.2,
                       tasty-hunit == 0.9.2,
                       tasty-quickcheck == 0.8.4,
                       text == 1.2.2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jetpack
